--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,10 @@
 body {
   font-size: 32px;
-  background-color: #000000;
-  color: #FFFFFF;
+  background-color: #fff;
+  color: #000;
   text-align: center;
   height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #content {
@@ -13,4 +14,12 @@ body {
 #date {
   position: absolute;
   bottom: 20px;
+}
+
+.red {
+  color: red;
+}
+
+.green {
+  color: #00ff00;
 }
